--- a/lights-out/src/components/Board/Board.css
+++ b/lights-out/src/components/Board/Board.css
@@ -1,5 +1,6 @@
 .Board {
     margin: 0 auto;
+    box-shadow: 0 0 50px #fff, -10px 0 90px #f0f, 10px 0 80px #0ff;
   }
 
 /* Glowing text for neon header */
