--- a/lights-out/src/components/Cell/Cell.css
+++ b/lights-out/src/components/Cell/Cell.css
@@ -1,10 +1,10 @@
 .Cell {
     height: 100px;
     width: 100px;
-    background-color: darkgray;
-    border: 1px solid cyan;
+    background-color: #263238;
+    transition: background-color 0.7s ease;
   }
   
   .Cell-lit {
-    background-color: white;
+    background-color: #00bcd4;
   }
