--- a/lights-out/src/components/Cell/Cell.css
+++ b/lights-out/src/components/Cell/Cell.css
@@ -3,6 +3,7 @@
     width: 100px;
     background-color: #263238;
     transition: background-color 0.7s ease;
+    border-radius: 2px;
   }
   
   .Cell-lit {
